# ciphercon

./: .gitignore  LICENCE  MANIFEST.in  README.md  pyproject.toml
ciphercon/: __init__.py  cli.py  core.py  gui.py
scripts/: version_helper.py
